--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- <link rel="stylesheet" href="assets/css/styles.css"> -->
     <link rel="stylesheet" href="/assets/css/style.css"/>
 
-    <link rel="icon" href="https://ik.imagekit.io/ecomax/assets/images/home/Favicon icon - Ecomax (1).png"/>
+    <link rel="icon" href="https://ik.imagekit.io/ecomax/assets/images/home/Faviconicon.png"/>
 
 
 </head>
@@ -82,7 +82,7 @@
                     <div class="col-1 d-flex justify-content-center d-lg-none ">
 
 
-                        <div type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling"
+                        <div data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling"
                             aria-controls="offcanvasScrolling">
                             <i class="fa-solid fa-bars-staggered"></i>
                         </div>
@@ -90,13 +90,15 @@
                         <div class="offcanvas w-100 offcanvas-start" data-bs-scroll="true" data-bs-backdrop="false"
                             tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
                             <div class="offcanvas-header">
-                                <h5 class="offcanvas-title" id="offcanvasScrollingLabel">
+                                <div class="offcanvas-title" id="offcanvasScrollingLabel">
                                     <div class="logo logo-xs logo-sm logo-md logo-lg logo-xl">
-                                        <a href="/"> <img
+                                        <a href="/"> 
+                                            <img
                                                 src="https://ik.imagekit.io/ecomax/assets/images/home/ELogo.png"
-                                                alt="images" class="img-fluid"></a>
+                                                alt="images" class="img-fluid" />
+                                            </a>
                                     </div>
-                                </h5>
+                                </div>
                                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
                                     aria-label="Close"></button>
                             </div>
@@ -144,23 +146,21 @@
                                 aria-label="Slide 3"></button>
                         </div>
                         <div class="carousel-inner">
-                            <div
-                                class="carousel-item active  hero-images hero-xs-image hero-sm-image  hero-md-image  hero-lg-image hero-xl-image">
+                            <div class="carousel-item active  hero-images hero-xs-image hero-sm-image  hero-md-image  hero-lg-image hero-xl-image">
                                 <img src="https://ik.imagekit.io/ecomax/assets/images/home/hero.png"
-                                    class="d-block img-fluid d-none  d-lg-block imagexxl" alt="images"
-                                  width="100%">
+                                    class="d-block img-fluid d-none  d-lg-block imagexxl col-12" alt="images"/>
                                 <img src="https://ik.imagekit.io/ecomax/assets/images/home/4aaad017295fca31b48000780707993c.png"
-                                    class=" img-fluid    d-lg-none" alt="images" width="100%">
+                                    class=" img-fluid  col-12  d-lg-none" alt="images"/>
                             </div>
                             <div
                                 class="carousel-item  hero-xs-image hero-sm-image hero-md-image  hero-lg-image hero-xl-image">
                                 <img src="https://ik.imagekit.io/ecomax/assets/images/home/hero2.png"
-                                    class="d-block img-fluid" alt="images" width="100%">
+                                    class="d-block img-fluid col-12" alt="images" />
                             </div>
                             <div
                                 class="carousel-item  hero-xs-image hero-sm-image  hero-md-image  hero-lg-image hero-xl-image">
                                 <img src="https://ik.imagekit.io/ecomax/assets/images/home/10b4287b734f6cb1ed66729e06a32418.png"
-                                    class="d-block img-fluid" alt="images" width="100%">
+                                    class="d-block img-fluid col-12" alt="images"/>
                             </div>
                         </div>
                         <button class="carousel-control-prev " type="button" data-bs-target="#carouselExampleIndicators"
@@ -197,7 +197,7 @@
                         <div class="About-text d-flex">
                             <div class="bordericon d-flex justify-content-center align-items-center ">
                                 <img src="https://ik.imagekit.io/ecomax/assets/images/home/Rectangle 58.png"
-                                    alt="images">
+                                    alt="images"/>
                             </div>
                             <p class="about-title">About Us</p>
                         </div>
@@ -219,18 +219,18 @@
                         </div>
                         <div class="sparkle-button">
                             <div class="sparkle-button">
-                                <button class="btn2">
-                                    <div class="d-flex align-items-center">
+                                <button class="btn2 d-flex align-items-center">
                                         <div class="about-btn d-flex align-items-center justify-content-center">
                                             <i class="fa-solid fa-arrow-up-long"></i>
                                         </div>
-                                        <div> <span class="text">Read More</span></div>
-                                    </div>
+                                        <span class="text">Read More</span>
                                 </button>
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
     </section>
     <!-- End: About us -->
 
