--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 </head>
 
-<body>
+<body class="d-xs-none d-sm-block">
     <div class="scrollbar back d-none">
         <a href="#top">
             <i class="fa-solid fa-arrow-up-long text-white"></i>
