--- a/index.html
+++ b/index.html
@@ -541,19 +541,15 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 Revitalize-btn d-flex justify-content-center">
-                    <div class="swiper-button-next1 swiper-button-next1">
-                        <div class=" btn-facility">
-                          <a href="collections/" class="btn2 d-flex align-items-center">
-                     
-                                <span class="about-btn  d-flex align-items-center justify-content-center">
-                                    <i class="fa-solid fa-arrow-up-long"></i>
-                                </span>
-                               <span class="text">View all</span>
-                         
-                          </a>
-                        </div>
-                    </div>
+                <div class="product_btn product_btn_bak d-flex justify-content-center">
+                    <a href="/collections/">
+                        <div class="btn_back d-flex align-items-center">
+                            <span class="about-btn  d-flex align-items-center justify-content-center">
+                                <i class="fa-solid fa-arrow-up-long"></i>
+                            </span>
+                                <span class="text">View All</span>
+                            </div>
+                    </a>
                 </div>
             </div>
         </div>
@@ -586,7 +582,7 @@
                                         <span><i class="fa-solid fa-minus"></i></span>
                                     </button>
                                     <div class="panel">
-                                        <div class="accordion-body">
+                                        <div class="accordion-body p-0">
                                             <p>To develop and manufacture specialty lubricant that provide value of
                                                 money along with exceptional services support meeting customers'
                                                 expectations</p>
@@ -600,7 +596,7 @@
 
                                     </button>
                                     <div class="panel1">
-                                        <div class="accordion-body">
+                                        <div class="accordion-body p-0">
                                             <p>To develop and manufacture specialty lubricant that provide value of
                                                 money along with exceptional services support meeting customers'
                                                 expectations</p>
@@ -931,7 +927,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
-    <script src="https://ik.imagekit.io/ecomax/assets/JS/script.js"></script>
+
     <script>
 
         $(window).scroll(function () {
@@ -1380,7 +1376,7 @@
 
         }
     </script>
-
+    <script src="https://ik.imagekit.io/ecomax/assets/JS/script.js"></script>
 
 </body>
 
