--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <!-- Start: hero -->
     <section class="hero">
         <div class="container-fluid">
-            <div class="row ">
+            <div class="row">
                 <div class="col-12 p-0">
                     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-indicators">
@@ -146,41 +146,37 @@
                                 aria-label="Slide 3"></button>
                         </div>
                         <div class="carousel-inner">
-                            <div class="carousel-item active  hero-images hero-xs-image hero-sm-image  hero-md-image  hero-lg-image hero-xl-image">
+                            <div class="carousel-item active hero-images hero-xs-image hero-sm-image hero-md-image hero-lg-image hero-xl-image">
                                 <img src="https://ik.imagekit.io/ecomax/assets/images/home/hero.png"
-                                    class="d-block img-fluid d-none  d-lg-block imagexxl col-12" alt="images"/>
+                                    class="d-block img-fluid d-none d-lg-block imagexxl col-12" alt="images" loading="lazy"/>
                                 <img src="https://ik.imagekit.io/ecomax/assets/images/home/4aaad017295fca31b48000780707993c.png"
-                                    class=" img-fluid  col-12  d-lg-none" alt="images"/>
+                                    class="img-fluid col-12 d-lg-none" alt="images" loading="lazy"/>
                             </div>
-                            <div
-                                class="carousel-item  hero-xs-image hero-sm-image hero-md-image  hero-lg-image hero-xl-image">
+                            <div class="carousel-item hero-xs-image hero-sm-image hero-md-image hero-lg-image hero-xl-image">
                                 <img src="https://ik.imagekit.io/ecomax/assets/images/home/hero2.png"
-                                    class="d-block img-fluid col-12" alt="images" />
+                                    class="d-block img-fluid col-12" alt="images" loading="lazy"/>
                             </div>
-                            <div
-                                class="carousel-item  hero-xs-image hero-sm-image  hero-md-image  hero-lg-image hero-xl-image">
+                            <div class="carousel-item hero-xs-image hero-sm-image hero-md-image hero-lg-image hero-xl-image">
                                 <img src="https://ik.imagekit.io/ecomax/assets/images/home/10b4287b734f6cb1ed66729e06a32418.png"
-                                    class="d-block img-fluid col-12" alt="images"/>
+                                    class="d-block img-fluid col-12" alt="images" loading="lazy"/>
                             </div>
                         </div>
-                        <button class="carousel-control-prev " type="button" data-bs-target="#carouselExampleIndicators"
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
                             data-bs-slide="prev">
-                            <span class="slaid-btn d-none d-md-block next_previous" 
-                     ><i class="fa-solid fa-angle-left"></i></span>
+                            <span class="slaid-btn d-none d-md-block next_previous"><i class="fa-solid fa-angle-left"></i></span>
                             <span class="visually-hidden">Previous</span>
                         </button>
-                        <button class="carousel-control-next " type="button" data-bs-target="#carouselExampleIndicators"
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
                             data-bs-slide="next">
-                            <span class="slaid-btn d-none d-md-block next_previous" 
-                   > <i class="fa-solid fa-angle-right"></i></span>
+                            <span class="slaid-btn d-none d-md-block next_previous"><i class="fa-solid fa-angle-right"></i></span>
                             <span class="visually-hidden">Next</span>
                         </button>
                     </div>
                 </div>
             </div>
         </div>
-
     </section>
+    
     <!-- End: hero -->
     <!-- Start: About us -->
     <section class="About-us section-padding">
@@ -554,8 +550,6 @@
             </div>
         </div>
     </section>
-  
-
     <!-- End:  Revitalize  -->
     <!-- Start: Fueling Excellence -->
     <section class="Fueling-Excellence Contact section-padding">
