--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 <div class="col-12 p-0 about-main flex-wrap d-flex">
                     <div class="col-12  col-xxl-6 ">
                         <div class="About-img col-12">
-                            <img src="https://ik.imagekit.io/ecomax/assets/images/home/Where_Every_Drop_Counts.png"
+                            <img src="https://ik.imagekit.io/ecomax/assets/images/home/Where_Every_Drop_Counts.jpg"
                                 alt="images" class="col-12">
                         </div>
                     </div>
@@ -489,7 +489,7 @@
                             <div class="swiper-slide  d-flex justify-content-center col-sm-6  col-lg-3">
                                 <div class="card Revitalize-card">
                                     <div class="card1 col-12 justify-content-center d-flex">
-                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/GAS_ENGINE_IL_API_SF_20W_50.png"
+                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/GAS_ENGINE_IL_API_SF_20W_50.jpg"
                                             class="card-img-top" alt="images"/>
                                     </div>
                                     <div class="card-body revitalize-card-body d-flex justify-content-center align-items-center"
