--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
                 <div class="col-12 p-0 about-main flex-wrap d-flex">
                     <div class="col-12  col-xxl-6 ">
                         <div class="About-img col-12">
-                            
-                            <img src="https://ik.imagekit.io/ecomax/assets/images/home/Where_Every_Drop_Counts.jpg"
+
+                            <img src="https://ik.imagekit.io/ecomax/assets/images/home/Where_Every_Drop_Counts.png"
                                 alt="images" class="col-12">
                         </div>
                     </div>
