--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                             <div class="swiper-slide  d-flex justify-content-center col-sm-6  col-lg-3">
                                 <div class="card Revitalize-card">
                                     <div class="card1 col-12 justify-content-center d-flex">
-                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/Revitalize6.png"class="card-img-top" alt="images" />
+                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/UTTO-OIL-WET-BRAKE-OIL.png"class="card-img-top" alt="images" />
                                     </div>
                                     <div class="card-body revitalize-card-body d-flex justify-content-center align-items-center">
                                         <p class="card-text text-center">UTTO OIL WET BRAKE OIL</p>
@@ -426,7 +426,7 @@
                             <div class="swiper-slide  d-flex justify-content-center col-sm-6  col-lg-3">
                                 <div class="card Revitalize-card">
                                     <div class="card1 col-12 justify-content-center d-flex">
-                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/Revitalize7.png"class="card-img-top" alt="images" />
+                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/LUBE-SAE-20W40-API.webp"class="card-img-top" alt="images" />
                                     </div>
                                     <div class="card-body revitalize-card-body d-flex justify-content-center align-items-center">
                                         <p class="card-text text-center">TUF LUBE SAE 20W40 API CH-4</p>
