--- a/collections/index.html
+++ b/collections/index.html
@@ -377,7 +377,13 @@
         crossorigin="anonymous"></script>
 
     <script>
-
+        if (window.location.href == "https://ecomaxlubricant.com/collections/") {
+            document.getElementById("collections_bak_btn").style.display = 'none';
+            console.log("none");
+        } else {
+            document.getElementById("collections_bak_btn").style.display = 'block';
+            console.log("block");
+        }
 
         $(document).ready(function () {
             loadJS([
