--- a/collections/index.html
+++ b/collections/index.html
@@ -139,6 +139,7 @@
                 <div class="col-12 d-flex flex-wrap p-0 Lubricants-products" id="contentDiv">
 
                 </div>
+             <div class="d-flex justify-content-center">
                 <div class="product_btn product_btn_bak justify-content-center" id="collections_bak_btn">
                     <a href="/collections/">
                         <div class="btn_back d-flex align-items-center">
@@ -149,6 +150,7 @@
                         </div>
                     </a>
                 </div>
+             </div>
             </div>
         </div>
     </section>
