--- a/collections/index.html
+++ b/collections/index.html
@@ -139,7 +139,7 @@
                 <div class="col-12 d-flex flex-wrap p-0 Lubricants-products" id="contentDiv">
 
                 </div>
-             <div class="">
+           
                 <div class="product_btn product_btn_bak justify-content-center" id="collections_bak_btn">
                     <a href="/collections/">
                         <div class="btn_back d-flex align-items-center">
@@ -150,7 +150,7 @@
                         </div>
                     </a>
                 </div>
-             </div>
+        
             </div>
         </div>
     </section>
@@ -383,7 +383,7 @@
             document.getElementById("collections_bak_btn").style.display = 'none';
             console.log("none");
         } else {
-            document.getElementById("collections_bak_btn").style.display = 'block';
+            document.getElementById("collections_bak_btn").style.display = 'flex';
             console.log("block");
         }
 
