--- a/contactus.html
+++ b/contactus.html
@@ -49,11 +49,11 @@
 </head>
 
 <body>
-  <div class="scrollbar back d-none">
-    <a href="#top">
-      <i class="fa-solid fa-arrow-up-long text-white"></i>
-    </a>
-  </div>
+  <a href="#top">
+    <div class="scrollbar back d-none">
+    <i class="fa-solid fa-arrow-up-long back-top "></i>
+    </div>
+</a>
   <div class="top-bar top-bar-xs top-bar-sm top-bar-md top-bar-lg">
     <div class="container1">
       <div class="row">
@@ -224,23 +224,19 @@
               <div class="col">
                 <input type="text" name="name" id="name" placeholder="First Name*" class="form-control field"
                   aria-label="First name" required>
-                <p id="n1" class="p-0 ms-1 text-danger"></p>
               </div>
               <div class="col ">
                 <input type="text" name="name" id="lname" placeholder="Last Name*" class="form-control field"
                   aria-label="Last name" required>
-                <p id="l1" class="p-0 ms-1 text-danger"></p>
               </div>
             </div>
             <div class="row form_field_container flex-column flex-sm-row">
               <div class="col ">
                 <input type="email" name="email" id="email" placeholder="Email*" required class="field form-control">
-                <p id="e1" class="p-0 ms-1 text-danger"></p>
               </div>
               <div class="col ">
                 <input type="number" name="phone_number" id="number" placeholder="Phone Number*" required
                   class="field form-control">
-                <p id="nu1" class="p-0 ms-1 text-danger"></p>
               </div>
             </div>
             <div class="row form_field_container flex-column flex-sm-row ">
@@ -407,7 +403,7 @@
                     <div class="d-flex">
                       <img class="me-3 mt-1 addres" 
                         src="https://ik.imagekit.io/ecomax/assets/images/home/ad.png" alt="images">
-                      <p class="text-light footer-ad">Block No. E-37, Hindva Dreams,<br> Dhoran
+                      <p class="text-light footer-add">Block No. E-37, Hindva Dreams,<br> Dhoran
                         Pardi Gaypagla Road,<br> Kamrej, Surat, Gujarat-394155</p>
                     </div>
 
@@ -448,7 +444,7 @@
                         <div class="d-flex">
                           <img class="me-3 mt-1 addres"
                             src="https://ik.imagekit.io/ecomax/assets/images/home/ad.png" alt="images">
-                          <p class="text-light footer-ad">Block No. E-37, Hindva Dreams,<br>
+                          <p class="text-light footer-add">Block No. E-37, Hindva Dreams,<br>
                             Dhoran Pardi Gaypagla Road,<br> Kamrej, Surat, Gujarat-394155
                           </p>
                         </div>
