--- a/products/index.html
+++ b/products/index.html
@@ -26,11 +26,11 @@
 </head>
 
 <body>
-    <div class="scrollbar back d-none">
-        <a href="#top">
-            <i class="fa-solid fa-arrow-up-long text-white"></i>
-        </a>
-    </div>
+    <a href="#top">
+        <div class="scrollbar back d-none">
+        <i class="fa-solid fa-arrow-up-long back-top "></i>
+        </div>
+    </a>
     
     <!-- Navbar Start -->
     <div class="top-bar top-bar-xs top-bar-sm top-bar-md top-bar-lg">
@@ -551,7 +551,7 @@
                                             <img class="me-3 border mt-1" 
                                                 src="https://ik.imagekit.io/ecomax/assets/images/home/ad.png"
                                                 alt="images">
-                                            <p class="text-light footer-ad">Block No. E-37, Hindva Dreams,<br> Dhoran
+                                            <p class="text-light footer-add">Block No. E-37, Hindva Dreams,<br> Dhoran
                                                 Pardi Gaypagla Road,<br> Kamrej, Surat, Gujarat-394155</p>
                                         </div>
 
@@ -596,7 +596,7 @@
                                                     <img class="me-3 mt-1 addres" 
                                                         src="https://ik.imagekit.io/ecomax/assets/images/home/ad.png"
                                                         alt="images">
-                                                    <p class="text-light footer-ad">Block No. E-37, Hindva Dreams,<br>
+                                                    <p class="text-light footer-add">Block No. E-37, Hindva Dreams,<br>
                                                         Dhoran Pardi Gaypagla Road,<br> Kamrej, Surat, Gujarat-394155
                                                     </p>
                                                 </div>
