--- a/about.html
+++ b/about.html
@@ -21,11 +21,11 @@
 </head>
 
 <body>
-    <div class="scrollbar back d-none">
-        <a href="#top">
-            <i class="fa-solid fa-arrow-up-long text-white"></i>
-        </a>
-    </div>
+    <a href="#top">
+        <div class="scrollbar back d-none">
+        <i class="fa-solid fa-arrow-up-long back-top "></i>
+        </div>
+    </a>
     <div class="top-bar top-bar-xs top-bar-sm top-bar-md top-bar-lg">
         <div class="container1">
             <div class="row">
@@ -125,7 +125,7 @@
                 <div class="d-none d-xl-block  col-xl-1 "></div>
                 <div class="col-12 about-seciton-text  col-xl-6 ">
                     <div class="about-description text-start ">
-                        <p class="mt-0 mb-0  about-seciton-description text-center text-md-start ">
+                        <p class="mt-0 mb-0  about-seciton-description text-center text-md-start border-About">
                             At Ecomax, we're not just about lubricant oils; we're about empowering industries, driving
                             sustainability
                             and building lasting relationships. With over 10 years of experience under our belt, we've
@@ -133,15 +133,13 @@
                             craft, perfected our products and cultivated a company culture centered around innovation
                             and integrity.
                         </p>
-                        <p class="border-About"></p>
-                        <p class=" mb-0 about-seciton-description text-center text-md-start ">
+                        <p class=" mb-0 about-seciton-description text-center text-md-start border-About">
                             Our journey began with a simple belief: that quality should never be compromised, and
                             sustainability
                             should always be a priority. What started as a passion project has blossomed into a global
                             enterprise,
                             touching lives and lubricating industries across continents.
                         </p>
-                        <p class="border-About"></p>
                         <p class="mb-0 about-seciton-description text-center text-md-start ">
                             What sets us apart is our relentless pursuit of excellence in every aspect of our business.
                             From research
@@ -307,13 +305,13 @@
     </section>
     <!-- End: benefit from -->
     <!-- numeric section start -->
-    <section class="after-befor-img section-padding">
+    <section class="after-befor-img numeric">
         <div class="img-set"><img src="https://ik.imagekit.io/ecomax/assets/images/about_page/Dot_small.png"
                 alt="images"></div>
         <div class="container1 ">
             <div class="row">
                 <div class="col-12 p-0 d-flex flex-wrap align-items-center">
-                    <div class="col-12 cout-m col-xl-6">
+                    <div class="col-12 cout-m col-xl-6 mb-4">
                         <div class="Global-Excellence-title">
                             <h3>
                                 Driving Success Through <br class="d-none"> Customer - Centric Solutions & <br
@@ -335,13 +333,12 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-12 col-xl-6 d-flex flex-wrap">
-                        <div class="col-12 col-md-6 after-befor">
-                            <div class="col-12 justify-content-center flex-wrap">
+                    <div class="col-12 col-xl-6 d-flex flex-wrap justify-content-between">
+                        <div class=" count-card after-befor">
+                            <div class="col-12 about-cout justify-content-center flex-wrap">
                                 <div class="cout cout-box d-flex justify-content-center bg-white ">
                                     <div class="d-flex counter1 justify-content-center align-items-center">
-                                        <div
-                                            class="cout-sab counter d-flex justify-content-center align-items-center flex-column ">
+                                        <div class="cout-sab counter d-flex justify-content-center align-items-center flex-column ">
                                             <h3 class="count count1 percent" data-count="10">0</h3>
                                             <span class="mt-2">Years of Experience</span>
                                         </div>
@@ -358,8 +355,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-md-6 befor-befor">
-                            <div class="col-12  justify-content-center flex-wrap">
+                        <div class=" count-card befor-befor">
+                            <div class="col-12 about-cout justify-content-center flex-wrap">
                                 <div class="cout cout-box d-flex justify-content-center bg-white ">
                                     <div class="d-flex counter1 justify-content-center align-items-center">
                                         <div
@@ -660,7 +657,7 @@
                                             <img class="me-3 mt-1 addres"
                                                 src="https://ik.imagekit.io/ecomax/assets/images/home/ad.png"
                                                 alt="images">
-                                            <p class="text-light footer-ad">Block No. E-37, Hindva Dreams,<br> Dhoran
+                                            <p class="text-light footer-add">Block No. E-37, Hindva Dreams,<br> Dhoran
                                                 Pardi Gaypagla Road,<br> Kamrej, Surat, Gujarat-394155</p>
                                         </div>
 
@@ -706,7 +703,7 @@
                                                     <img class="me-3 mt-1 addres"
                                                         src="https://ik.imagekit.io/ecomax/assets/images/home/ad.png"
                                                         alt="images">
-                                                    <p class="text-light footer-ad">Block No. E-37, Hindva Dreams,<br>
+                                                    <p class="text-light footer-add">Block No. E-37, Hindva Dreams,<br>
                                                         Dhoran Pardi Gaypagla Road,<br> Kamrej, Surat, Gujarat-394155
                                                     </p>
                                                 </div>
