--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
     <link rel="icon" href="https://ik.imagekit.io/ecomax/assets/images/home/Faviconicon.png"/>
 </head>
 <body class="d-xs-none d-sm-block">
-    <div class="scrollbar back d-none">
+  
         <a href="#top">
-            <i class="fa-solid fa-arrow-up-long text-white"></i>
+            <div class="scrollbar back d-none ">
+            <i class="fa-solid fa-arrow-up-long back-top "></i>
+            </div>
         </a>
-    </div>
+
     <div class="top-bar top-bar-xs top-bar-sm top-bar-md top-bar-lg">
         <div class="container1">
             <div class="row">
@@ -214,12 +216,14 @@
                         </div>
                         <div class="sparkle-button">
                             <div class="sparkle-button">
+                              <a href="collections/">
                                 <button class="btn3 d-flex  align-items-center">
                                     <span class="about-btn about-btn-2 d-flex align-items-center justify-content-center">
                                         <i class="fa-solid fa-arrow-up-long"></i>
                                     </span>
                                     <span class="text">View Our Products</span>
                                 </button>
+                              </a>
                             </div>
                         </div>
                     </div>
@@ -437,15 +441,18 @@
                     </div>
                 </div>
                 <div class="product_btn product_btn_bak d-flex justify-content-center">
-                    <a href="/collections/">
-                        <div class="btn_back d-flex align-items-center">
-                            <span class="about-btn  d-flex align-items-center justify-content-center">
-                                <i class="fa-solid fa-arrow-up-long"></i>
-                            </span>
-                             <span class="text">View All</span>
-                        </div>
-                    </a>
+                    <div class=" btn-facility">
+                        <a href="/collections/">
+                            <button class="btn2 d-flex align-items-center">
+                                <span class="about-btn  d-flex align-items-center justify-content-center">
+                                    <i class="fa-solid fa-arrow-up-long"></i>
+                                </span>
+                               <span class="text">View All</span>
+                            </button>
+                        </a>
+                    </div>
                 </div>
+              
             </div>
         </div>
     </section>
@@ -660,7 +667,7 @@
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-3">
                                         <div class="d-flex">
                                             <img class="me-3 mt-1 addres"  src="https://ik.imagekit.io/ecomax/assets/images/home/ad.png"alt="images">
-                                            <p class="text-light footer-ad">Block No. E-37, Hindva Dreams,<br> Dhoran Pardi Gaypagla Road,<br> Kamrej, Surat, Gujarat-394155</p>
+                                            <p class="text-light footer-add">Block No. E-37, Hindva Dreams,<br> Dhoran Pardi Gaypagla Road,<br> Kamrej, Surat, Gujarat-394155</p>
                                         </div>
                                     </li>
                                 </ul>
@@ -690,7 +697,7 @@
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
                                                 <div class="d-flex">
                                                     <img class="me-3 mt-1 addres" src="https://ik.imagekit.io/ecomax/assets/images/home/ad.png" alt="images">
-                                                    <p class="text-light footer-ad">Block No. E-37, Hindva Dreams,<br> Dhoran Pardi Gaypagla Road,<br> Kamrej, Surat, Gujarat-394155 </p>
+                                                    <p class="text-light footer-add">Block No. E-37, Hindva Dreams,<br> Dhoran Pardi Gaypagla Road,<br> Kamrej, Surat, Gujarat-394155 </p>
                                                 </div>
                                             </li>
                                         </ul>
