--- a/collections/index.html
+++ b/collections/index.html
@@ -18,9 +18,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" href="https://ik.imagekit.io/ecomax/assets/images/home/Faviconicon.png" />
 
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="https://ik.imagekit.io/ecomax/assets/css/style.css">
 
-    <script src="https://ik.imagekit.io/ecomax/assets/JS/init.js?time=1" defer></script>
+
 
 </head>
 
@@ -461,6 +461,7 @@
         });
 
     </script>
+    <script src="https://ik.imagekit.io/ecomax/assets/JS/init.js?time=1" defer></script>
 
 
 
