--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css"/>
     <!-- main css -->
     <!-- <link rel="stylesheet" href="assets/css/styles.css"> -->
-    <link rel="stylesheet" href="/assets/css/style.css"/>
     <link rel="icon" href="https://ik.imagekit.io/ecomax/assets/images/home/Faviconicon.png"/>
+    <link rel="stylesheet" href="https://ik.imagekit.io/ecomax/assets/css/style.css"/>
+
 </head>
 <body class="d-xs-none d-sm-block">
   
