--- a/industrial/industrial.html
+++ b/industrial/industrial.html
@@ -17,10 +17,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" href="https://ik.imagekit.io/ecomax/assets/images/home/Faviconicon.png" />
+    <link rel="stylesheet" href="https://ik.imagekit.io/ecomax/assets/css/style.css">
 
-    <link rel="stylesheet" href="/assets/css/style.css">
-
-    <script src="https://ik.imagekit.io/ecomax/assets/JS/init.js?time=1" defer></script>
 
 </head>
 
@@ -384,6 +382,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="https://ik.imagekit.io/ecomax/assets/JS/init.js?time=1" defer></script>
+
     <!-- Script end -->
 </body>
 
