--- a/products/index.html
+++ b/products/index.html
@@ -18,10 +18,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" href="https://ik.imagekit.io/ecomax/assets/images/home/Faviconicon.png"/>
 
-    <link rel="stylesheet" href="/assets/css/style.css">
 
-    <script src="https://ik.imagekit.io/ecomax/assets/JS/init.js?time=1" defer></script>
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://ik.imagekit.io/ecomax/assets/css/style.css">
 
 </head>
 
@@ -752,6 +752,7 @@
 
         </script>
 
+    <script src="https://ik.imagekit.io/ecomax/assets/JS/init.js?time=1" defer></script>
 
 
         <!-- Script end -->
