--- a/products/index.html
+++ b/products/index.html
@@ -21,7 +21,7 @@
 
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/styles.css">
 
 </head>
 
@@ -548,7 +548,7 @@
                                                 alt="images">infoecomaxlubricant@gmail.com</a></li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-3">
                                         <div class="d-flex">
-                                            <img class="me-3 border mt-1" 
+                                            <img class="me-3  mt-1 addres" 
                                                 src="https://ik.imagekit.io/ecomax/assets/images/home/ad.png"
                                                 alt="images">
                                             <p class="text-light footer-add">Block No. E-37, Hindva Dreams,<br> Dhoran
