--- a/index.html
+++ b/index.html
@@ -362,8 +362,8 @@
                                 <h3>Revitalize Your Ride: <br>Discover Ecomax Engine Oils!</h3>
                             </div>
                             <div class="col-12 d-flex justify-content-between">
-                                <div class="swiper-button-prev"><i class="fa-solid fa-arrow-left-long"></i></div>
-                                <div class="swiper-button-next"><i class="fa-solid fa-arrow-right-long"></i></div>
+                                <div class="swiper-button-prev swiper-button-prevRevitalize "><i class="fa-solid fa-arrow-left-long"></i></div>
+                                <div class="swiper-button-next swiper-button-nextRevitalize "><i class="fa-solid fa-arrow-right-long"></i></div>
                             </div>
                         </div>
                         <div class="swiper-wrapper d-flex col-12">
@@ -664,7 +664,7 @@
                                 <h5 class="mb-4 footer_heading ms-5">Connect with us</h5>
                                 <ul class="list-group footer-hover ms-5">
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-3"><a href="tel:+919998035620" class="link-light text-decoration-none"> <img class="me-3" src="https://ik.imagekit.io/ecomax/assets/images/home/cal.png"alt="images">+91 99980 35620</a></li>
-                                    <li class="list-group-item bg-transparent border-0 p-0 mb-3"><a href="https://mail.google.com/mail/u/0/#search/infoecomaxlubricant@gmail.com?compose=new"class="link-light text-decoration-none"><img class="me-3" src="https://ik.imagekit.io/ecomax/assets/images/home/email.png"alt="images">infoecomaxlubricant@gmail.com</a></li>
+                                    <li class="list-group-item bg-transparent border-0 p-0 mb-3"><a href="https://mail.google.com/mail/u/0/#search/infoecomaxlubricant@gmail.com?compose=new"class="link-light text-decoration-none "><img class="me-3" src="https://ik.imagekit.io/ecomax/assets/images/home/email.png"alt="images">infoecomaxlubricant@gmail  .com</a></li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-3">
                                         <div class="d-flex">
                                             <img class="me-3 mt-1 addres"  src="https://ik.imagekit.io/ecomax/assets/images/home/ad.png"alt="images">
