--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- main css -->
     <!-- <link rel="stylesheet" href="assets/css/styles.css"> -->
     <link rel="icon" href="https://ik.imagekit.io/ecomax/assets/images/home/Faviconicon.png"/>
-    <link rel="stylesheet" href="/assets/css/ecomaxstyle.css"/>
+    <link rel="stylesheet" href="/assets/css/ecomaxstyles.css"/>
 
 </head>
 <body class="d-xs-none d-sm-block">
