industrial page Start

--- a/industrial/industrial.html
+++ b/industrial/industrial.html
@@ -122,8 +122,15 @@
         <div class="container1">
             <div class="row p-0">
                 <div class="col-12 p-0 flex-wrap align-items-center d-flex industrial-sab">
-                    <div class="industrial-text industrial-height">
-                        1
+                    <div class="industrial-text industrial-height text-white">
+                         <div class="industrial-title">
+                            <h1>
+                                Industrial
+                            </h1>
+                         </div>
+                         <div class="industrial-description">
+                            <p>Empowering Industries with Superior Lubrication Solutions</p>
+                         </div>
                     </div>
                     <div class="industrial-images ">
                         <div class="industrial-image">
@@ -131,28 +138,160 @@
                         </div>
                     </div>
                     <div class="industrial-images-circle industrial-height">
-                        1
+                        <div class="industrial-images-circle">
+                            <img src="/assets/images/industrial/Industrial-sip.png" alt="Industrial-city" class="img-fluid industrial-height">
+                        </div>
                     </div>
                     <div class="col-3 industrial-images industrial-height">
-                        1
+                        <div class="industrial-image">
+                            <img src="/assets/images/industrial/Industrial-plan.png" alt="Industrial-city" class="img-fluid industrial-height">
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
     <!-- industrial hero End -->
+
     <!-- Ecomax Lubricants Start -->
-    <section class="section-padding">
+   <section class="section-padding">
         <div class="container1">
             <div class="row">
                 <div class="d-flex Lubricants flex-column p-0">
                     <h1 class="text-center Lubricants-title " >
                         Ecomax's Industrial Lubricants
                     </h1>
-                    <p class="text-center Lubricants-text">Explore our comprehensive range of industrial lubricants designed to enhance efficiency, reliability and longevity of your machinery.</p>
+                    <p class="text-center Lubricants-text" id="collection_description">
+                        Explore our comprehensive range of industrial lubricants designed to enhance efficiency, reliability and longevity of your machinery.
+                    </p>
                 </div>
-                <div class="col-12 d-flex flex-wrap p-0 Lubricants-products" id="contentDiv">
-
+                <div class="col-12 d-flex flex-wrap p-0 Lubricants-products">
+                    <div class="products">
+                        <a href="#">
+                            <div class="products-img">
+                                <img src="/assets/images/industrial/Ecosynth 610.png"
+                                    alt=" Ecosynth 610" class="img-fluid col-12 product_img">
+                            </div>
+                            <div class="products-title">
+                                <div class="d-flex justify-content-between">
+                                    <h5>
+                                        Ecosynth 610
+                                    </h5>
+                                    <h5 class="products-icon">
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                    </h5>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="products">
+                        <a href="#">
+                            <div class="products-img">
+                                <img src="/assets/images/industrial/Ecosynth 610.png"
+                                    alt=" Ecosynth 610" class="img-fluid col-12 product_img">
+                            </div>
+                            <div class="products-title">
+                                <div class="d-flex justify-content-between">
+                                    <h5>
+                                        Ecosynth 610
+                                    </h5>
+                                    <h5 class="products-icon">
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                    </h5>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="products">
+                        <a href="#">
+                            <div class="products-img">
+                                <img src="/assets/images/industrial/Ecosynth 610.png"
+                                    alt=" Ecosynth 610" class="img-fluid col-12 product_img">
+                            </div>
+                            <div class="products-title">
+                                <div class="d-flex justify-content-between">
+                                    <h5>
+                                        Ecosynth 610
+                                    </h5>
+                                    <h5 class="products-icon">
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                    </h5>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="products">
+                        <a href="#">
+                            <div class="products-img">
+                                <img src="/assets/images/industrial/Ecosynth 610.png"
+                                    alt=" Ecosynth 610" class="img-fluid col-12 product_img">
+                            </div>
+                            <div class="products-title">
+                                <div class="d-flex justify-content-between">
+                                    <h5>
+                                        Ecosynth 610
+                                    </h5>
+                                    <h5 class="products-icon">
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                    </h5>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="products">
+                        <a href="#">
+                            <div class="products-img">
+                                <img src="/assets/images/industrial/Ecosynth 610.png"
+                                    alt=" Ecosynth 610" class="img-fluid col-12 product_img">
+                            </div>
+                            <div class="products-title">
+                                <div class="d-flex justify-content-between">
+                                    <h5>
+                                        Ecosynth 610
+                                    </h5>
+                                    <h5 class="products-icon">
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                    </h5>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="products">
+                        <a href="#">
+                            <div class="products-img">
+                                <img src="/assets/images/industrial/Ecosynth 610.png"
+                                    alt=" Ecosynth 610" class="img-fluid col-12 product_img">
+                            </div>
+                            <div class="products-title">
+                                <div class="d-flex justify-content-between">
+                                    <h5>
+                                        Ecosynth 610
+                                    </h5>
+                                    <h5 class="products-icon">
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                    </h5>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="products">
+                        <a href="#">
+                            <div class="products-img">
+                                <img src="/assets/images/industrial/Ecosynth 610.png"
+                                    alt=" Ecosynth 610" class="img-fluid col-12 product_img">
+                            </div>
+                            <div class="products-title">
+                                <div class="d-flex justify-content-between">
+                                    <h5>
+                                        Ecosynth 610
+                                    </h5>
+                                    <h5 class="products-icon">
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                    </h5>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
