--- a/collections/index.html
+++ b/collections/index.html
@@ -378,7 +378,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-
+        <script>
+            $(window).scroll(function () {
+                if ($(window).scrollTop() > 400) {
+                    $(".scrollbar").addClass("show_scroll_btn");
+                }
+                else {
+                    $(".scrollbar").removeClass("show_scroll_btn");
+                }
+            });
+        </script>
     <script>
 
         if (window.location.href == "https://ecomaxlubricant.com/collections/") {
