--- a/industrial_products/industrial_product.html
+++ b/industrial_products/industrial_product.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ecomax | industrial</title>
+    <title>Ecomax | industrial-Product</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- Font Awesome Icon Link -->
@@ -17,14 +17,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" href="https://ik.imagekit.io/ecomax/assets/images/home/Faviconicon.png" />
-    <link rel="stylesheet" href="/assets/css/ecomaxstyless.css"/>
+    <link rel="stylesheet" href="/assets/css/ecomaxstyless.css" />
 </head>
 
 
 <body>
     <a href="#top">
         <div class="scrollbar back d-none">
-        <i class="fa-solid fa-arrow-up-long back-top "></i>
+            <i class="fa-solid fa-arrow-up-long back-top "></i>
         </div>
     </a>
     </div>
@@ -117,186 +117,121 @@
         </div>
     </section>
     <!-- Navbar End -->
-    <!-- industrial hero Start -->
-    <section class="industrial col-12">
-        <div class="container1">
-            <div class="row p-0">
-                <div class="col-12 p-0 flex-wrap align-items-center d-flex flex-wrap industrial-sab">
-                    <div class="industrial-text  industrial-height text-white">
-                         <div class="industrial-title">
-                            <h1 class="m-0">
-                                Industrial
-                            </h1>
-                         </div>
-                         <div class="industrial-description">
-                            <p>Empowering Industries with Superior Lubrication Solutions</p>
-                         </div>
-                    </div>
-                    <div class="industrial-images ">
-                        <div class="industrial-image">
-                            <img src="/assets/images/industrial/Industrial-city.png" alt="Industrial-city" class="img-fluid industrial-height">
-                        </div>
-                    </div>
-                    <div class="industrial-images-circle industrial-height">
-                        <div class="industrial-images-circle">
-                            <img src="/assets/images/industrial/Industrial-sip.png" alt="Industrial-city" class="img-fluid industrial-height">
-                        </div>
-                    </div>
-                    <div class="col-3 industrial-images industrial-height">
-                        <div class="industrial-image">
-                            <img src="/assets/images/industrial/Industrial-plan.png" alt="Industrial-city" class="img-fluid industrial-height">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- industrial hero End -->
-
-    <!-- Ecomax Lubricants Start -->
-   <section class="section-padding">
+    <!-- industrial-Product-Start -->
+    <div class="industrial-Product">
         <div class="container1">
             <div class="row">
-                <div class="d-flex Lubricants flex-column p-0">
-                    <h1 class="text-center Lubricants-title " >
-                        Ecomax's Industrial Lubricants
-                    </h1>
-                    <p class="text-center Lubricants-text">
-                        Explore our comprehensive range of industrial lubricants designed to enhance efficiency, reliability and longevity of your machinery.
-                    </p>
-                </div>
-                <div class="col-12 d-flex flex-wrap p-0 Lubricants-products">
-                    <div class="products">
-                        <a href="/industrial_products/industrial_product.html">
-                            <div class="products-img">
-                                <img src="/assets/images/industrial/Ecosynth 610.png"
-                                    alt=" Ecosynth 610" class="img-fluid col-12 product_img">
-                            </div>
-                            <div class="products-title">
-                                <div class="d-flex justify-content-between">
-                                    <h5>
-                                        Ecosynth 610
-                                    </h5>
-                                    <h5 class="products-icon">
-                                        <i class="fa-solid fa-arrow-right"></i>
-                                    </h5>
-                                </div>
-                            </div>
-                        </a>
+                <div class="col-12 d-flex justify-content-between flex-wrap p-0">
+                    <div class="industrial-Product-title text-white">
+                        <h1 class="m-0">
+                            ECOSYNTH 610
+                        </h1>
+                        <p>HIGH TEMPERATURE EP CHAIN AND CONVEYOR LUBRICANT</p>
                     </div>
-                    <div class="products">
-                        <a href="#">
-                            <div class="products-img">
-                                <img src="/assets/images/industrial/Ecosynth 610.png"
-                                    alt=" Ecosynth 610" class="img-fluid col-12 product_img">
-                            </div>
-                            <div class="products-title">
-                                <div class="d-flex justify-content-between">
-                                    <h5>
-                                        Ecosynth 610
-                                    </h5>
-                                    <h5 class="products-icon">
-                                        <i class="fa-solid fa-arrow-right"></i>
-                                    </h5>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="products">
-                        <a href="#">
-                            <div class="products-img">
-                                <img src="/assets/images/industrial/Ecosynth 610.png"
-                                    alt=" Ecosynth 610" class="img-fluid col-12 product_img">
-                            </div>
-                            <div class="products-title">
-                                <div class="d-flex justify-content-between">
-                                    <h5>
-                                        Ecosynth 610
-                                    </h5>
-                                    <h5 class="products-icon">
-                                        <i class="fa-solid fa-arrow-right"></i>
-                                    </h5>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="products">
-                        <a href="#">
-                            <div class="products-img">
-                                <img src="/assets/images/industrial/Ecosynth 610.png"
-                                    alt=" Ecosynth 610" class="img-fluid col-12 product_img">
-                            </div>
-                            <div class="products-title">
-                                <div class="d-flex justify-content-between">
-                                    <h5>
-                                        Ecosynth 610
-                                    </h5>
-                                    <h5 class="products-icon">
-                                        <i class="fa-solid fa-arrow-right"></i>
-                                    </h5>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="products">
-                        <a href="#">
-                            <div class="products-img">
-                                <img src="/assets/images/industrial/Ecosynth 610.png"
-                                    alt=" Ecosynth 610" class="img-fluid col-12 product_img">
-                            </div>
-                            <div class="products-title">
-                                <div class="d-flex justify-content-between">
-                                    <h5>
-                                        Ecosynth 610
-                                    </h5>
-                                    <h5 class="products-icon">
-                                        <i class="fa-solid fa-arrow-right"></i>
-                                    </h5>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="products">
-                        <a href="#">
-                            <div class="products-img">
-                                <img src="/assets/images/industrial/Ecosynth 610.png"
-                                    alt=" Ecosynth 610" class="img-fluid col-12 product_img">
-                            </div>
-                            <div class="products-title">
-                                <div class="d-flex justify-content-between">
-                                    <h5>
-                                        Ecosynth 610
-                                    </h5>
-                                    <h5 class="products-icon">
-                                        <i class="fa-solid fa-arrow-right"></i>
-                                    </h5>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="products">
-                        <a href="#">
-                            <div class="products-img">
-                                <img src="/assets/images/industrial/Ecosynth 610.png"
-                                    alt=" Ecosynth 610" class="img-fluid col-12 product_img">
-                            </div>
-                            <div class="products-title">
-                                <div class="d-flex justify-content-between">
-                                    <h5>
-                                        Ecosynth 610
-                                    </h5>
-                                    <h5 class="products-icon">
-                                        <i class="fa-solid fa-arrow-right"></i>
-                                    </h5>
-                                </div>
-                            </div>
-                        </a>
+                    <div class="industrial-Product-images">
+                        <img src="/assets/images/industrial_product/ECOSYNTH610.png" alt="ECOSYNTH 610"
+                            class="img-fluid">
                     </div>
                 </div>
             </div>
         </div>
-    </section>
-    <!-- Ecomax Lubricants End -->
+    </div>
+    <!-- industrial-Product-End -->
+    <!-- PRODUCT OVERVIEW & SPECIAL FEATURES Start  -->
+    <div class="PRODUCT_OVERVIEW section-padding">
+        <div class="container1">
+            <div class="row">
+                <div class="col-12 d-flex PRODUCT-OVERVIEW-And-SPECIAL-FEATURES p-0">
+                    <div class="col-6 PRODUCT-OVERVIEW d-flex">
+                        <h2 class="m-0">
+                            PRODUCT OVERVIEW
+                        </h2>
+                        <p>Ecosynth 610 High temperature EP Chain and conveyor lubricant is fully synthetic ester base
+                            high
+                            temperature chain oil with optimum wear protection, formulated for <br> lubrication of
+                            chains and
+                            conveyors working at elevated temperature and also under influence of humidity Unique
+                            combination of synthetic ester and specifically designed <br> anti-oxidant package ensures
+                            superior
+                            performance in terms of evaporation, thermal stability and varnish formation.</p>
+                    </div>
+                    <div class="col-6 SPECIAL-FEATURES">
+                        <h2>
+                            SPECIAL FEATURES
+                        </h2>
+                        <ul>
+                            <li>
+                                Has a temperature range of -30 C to +300 C.
+                            </li>
+                            <li>
+                                Excellent anti wear properties at elevated temperature gives longer chain life.
+                            </li>
+                            <li>
+                                It penetrates into link and pins and by reducing wear in highest potential wear area,
+                                <br> it
+                                increase life of chain and further reduces maintenance cost.
+                            </li>
+                            <li>
+                                Low Evaporation of oil offers good economy.
+                            </li>
+                            <li>
+                                Excellent corrosion resistance to protect in humid , damp and even wet conditions.
+                            </li>
+                            <li>
+                                Does not form any carbon deposits and provides clean and safe<br> working environment.
+                            </li>
+                            <li>
+                                Uniquely designed anti-oxidant package provides long service life with lower <br>
+                                deposits
+                                and varnish formation.
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- PRODUCT OVERVIEW & SPECIAL FEATURES End  -->
+    <!-- TECHNICAL SPECIFICATIONS Start -->
+    <div class="TECHNICAL-SPECIFICATIONS">
+        <div class="container1">
+            <div class="row">
+                <div class="col-12 TECHNICAL-SPECIFICATIONS-Result justify-content-between d-flex flex-wrap">
+                    <div class="TECHNICAL-SPECIFICATIONS-title">
+                        <h2 class="text-white">
+                            TECHNICAL <br> SPECIFICATIONS
+                        </h2>
+                    </div>
+                    <table class="PROPERTY-TESTMETHOD-RESULT">
+                        <thead>
+                          <tr class="text-white text-center">
+                            <th scope="col">PROPERTY</th>
+                            <th scope="col">TEST METHOD</th>
+                            <th scope="col">RESULT</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <td>Mark</td>
+                            <td>Otto</td>
+                            <td>@mdo</td>
+                          </tr>
+                          <tr>
+                            <td>Jacob</td>
+                            <td>Thornton</td>
+                            <td>@fat</td>
+                          </tr>
+                          <tr>
+                            <td colspan="2">Larry the Bird</td>
+                            <td>@twitter</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- TECHNICAL SPECIFICATIONS End -->
     <!-- Footer start -->
     <footer>
         <div class="footer_inner">
