--- a/products/index.html
+++ b/products/index.html
@@ -630,7 +630,16 @@
             crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
         <script src="/assets/JS/script.js"></script>
-
+        <script>
+            $(window).scroll(function () {
+                if ($(window).scrollTop() > 400) {
+                    $(".scrollbar").addClass("show_scroll_btn");
+                }
+                else {
+                    $(".scrollbar").removeClass("show_scroll_btn");
+                }
+            });
+        </script>
         <script>
             $(document).ready(function () {
                 loadJS([
