--- a/index.html
+++ b/index.html
@@ -53,8 +53,18 @@
                             <li>
                                 <a href="/" class="text-success">HOME</a>
                             </li>
-                            <li>
-                                <a href="collections/">PRODUCTS</a>
+                            <li class="dropdown-products">
+                                <a href="#">
+                                    PRODUCTS
+                                </a>
+                                <ul class="dropdown-menu-products">
+                                    <li class="border-bottom">
+                                        <a href="/collections/">AUTOMOTIVE</a>
+                                    </li>
+                                    <li>
+                                        <a href="/industrial/">INDUDTRIAL</a>
+                                    </li>
+                                </ul>
                             </li>
                             <li>
                                 <a href="about.html">ABOUT US </a>
