--- a/career.html
+++ b/career.html
@@ -48,8 +48,18 @@
                             <li>
                                 <a href="/">HOME</a>
                             </li>
-                            <li>
-                                <a href="collections/">PRODUCTS</a>
+                            <li class="dropdown-products">
+                                <a href="#">
+                                    PRODUCTS
+                                </a>
+                                <ul class="dropdown-menu-products">
+                                    <li class="border-bottom">
+                                        <a href="/collections/">AUTOMOTIVE</a>
+                                    </li>
+                                    <li>
+                                        <a href="/industrial/">INDUDTRIAL</a>
+                                    </li>
+                                </ul>
                             </li>
 
                             <li>
