--- a/contactus.html
+++ b/contactus.html
@@ -76,9 +76,19 @@
               <li>
                 <a href="/">HOME</a>
               </li>
-              <li>
-                <a href="collections/">PRODUCTS</a>
-              </li>
+              <li class="dropdown-products">
+                <a href="#">
+                    PRODUCTS
+                </a>
+                <ul class="dropdown-menu-products">
+                    <li class="border-bottom">
+                        <a href="/collections/">AUTOMOTIVE</a>
+                    </li>
+                    <li>
+                        <a href="/industrial/">INDUDTRIAL</a>
+                    </li>
+                </ul>
+            </li>
 
               <li>
                 <a href="about.html">ABOUT US </a>
