--- a/products/index.html
+++ b/products/index.html
@@ -728,7 +728,7 @@
                         document.getElementById('data-images_mini').innerHTML = mini_images;
 
                         let bak_btn = `
-                        <a href="https://ecomaxlubricant.com/collections/index?s=${collectionSlug}">
+                        <a href="${collectionSlug}">
                         <div class="btn_back d-flex align-items-center">
                             <span class="about-btn d-flex back_btn align-items-center justify-content-center">
                                 <i class="fa-solid fa-arrow-left-long"></i>
@@ -736,7 +736,7 @@
                             <span class="text">Back</span>
                         </div>
                     </a>
-                    
+
                         `;
 
                        document.getElementById("Back_btn_Product").innerHTML=bak_btn;
